<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingBottom="2dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/displayContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0E0E0"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/historyTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end|bottom"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/example_text"
            android:textColor="@android:color/black"
            android:textSize="48sp" />

    </LinearLayout>

    <Button
    android:id="@+id/btnCE"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="2dp"
    android:layout_marginTop="4dp" android:backgroundTint="#E0E0E0"
    android:insetTop="0dp"
    android:insetBottom="0dp"
    android:text="@string/ce_btn_text"
    android:textColor="@android:color/black"
    android:textSize="24sp"
    app:cornerRadius="0dp" app:layout_constraintTop_toBottomOf="@id/displayContainer" app:layout_constraintBottom_toTopOf="@+id/btn7"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btnC" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_marginTop="4dp" android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/c_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btnCE"
        app:layout_constraintBottom_toBottomOf="@+id/btnCE"
        app:layout_constraintStart_toEndOf="@+id/btnCE"
        app:layout_constraintEnd_toStartOf="@+id/btnBS" />

    <Button
        android:id="@+id/btnBS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_marginTop="4dp" android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/bs_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btnCE"
        app:layout_constraintBottom_toBottomOf="@+id/btnCE"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_marginTop="4dp" android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/slash_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btnCE"
        app:layout_constraintBottom_toBottomOf="@+id/btnCE"
        app:layout_constraintStart_toEndOf="@+id/btnBS"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_7_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCE"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn8" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_8_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn7"
        app:layout_constraintBottom_toBottomOf="@+id/btn7"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn9" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_9_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn7"
        app:layout_constraintBottom_toBottomOf="@+id/btn7"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/x_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn7"
        app:layout_constraintBottom_toBottomOf="@+id/btn7"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_4_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn5" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_5_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn4"
        app:layout_constraintBottom_toBottomOf="@+id/btn4"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn6" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_6_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn4"
        app:layout_constraintBottom_toBottomOf="@+id/btn4"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btnSubtract" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/dash_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn4"
        app:layout_constraintBottom_toBottomOf="@+id/btn4"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_1_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        app:layout_constraintBottom_toTopOf="@+id/btnPlusMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_2_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn1"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintEnd_toStartOf="@+id/btn3" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_3_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn1"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/plus_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btn1"
        app:layout_constraintBottom_toBottomOf="@+id/btn1"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnPlusMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/plus_minus_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn0" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FAFAFA"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/_0_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btnPlusMinus"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlusMinus"
        app:layout_constraintStart_toEndOf="@+id/btnPlusMinus"
        app:layout_constraintEnd_toStartOf="@+id/btnDot" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/dot_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btnPlusMinus"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlusMinus"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#E0E0E0"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/equal_btn_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toTopOf="@+id/btnPlusMinus"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlusMinus"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>